assets/css/style.css
.container {
    display: flex;
    justify-content: center
}

body {
    background-color: black;
}

h1 {
    color: white;
}

#gameContainer{
    width:600px;
    height:610px;
    display:flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    border: 7px solid blue;
    box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
    margin: 0;
}

.column{
    border:7px solid blue;
    width:90px;
    background-color: blue;
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
    position: relative;
}
.slot{
    background-color: white;
    width:100%;
    position: absolute;
    z-index: 2;
    height:90px;
    border-radius: 50%;
}
.slot.clickable.red:hover{
    background-color: red;
}
.slot.clickable.yellow:hover{
    background-color: yellow;
}

#playerOne {
    color: red;
    font-size: 60px;
}

#playerTwo {
    color: rgba(194, 194, 0, 0.842);
    font-size: 60px;
}

#red-scoreboard {
    padding-top: 30px;
    float: right;
    line-height: 20px;
    margin-bottom: 50px;
    width: 25%;
    text-align: center;
}

#yellow-scoreboard {
    float:left;
    line-height: 20px;
    margin-bottom: 50px;
    width: 25%; 
    text-align: center;
    padding-top: 30px;
}

#redScore {
    font-size:50px;
    color: white;
}

#yellowScore {
    font-size:50px;
    color: white;
}

@media screen and (max-width:1050px) {

.container {
    width: 100%;
}
#red-scoreboard {
    width: 50%;
}

#yellow-scoreboard {
    width: 50%;
}

}

@media screen and (max-width:600px) {

#gameContainer {
    width: 100%;
    height: 400px;
}

.column{
    border:4px solid blue;
    width:90px;
    background-color: blue;
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
    position: relative;
}

.slot{
    background-color: white;
    width:100%;
    z-index: 2;
    height:46px;
    border-radius: 50%;
    position: unset;
}

#playerTwo {
    font-size: 45px;
}

#playerOne {
    font-size: 45px;
}

}

